--- a/timeline.html
+++ b/timeline.html
@@ -23,7 +23,7 @@
         <div class="buttons">
             <a href="index.html" class="btn btn-bir">Sinh nhật</a>
             <a href="timeline.html" class="btn btn-timeline">Dòng thời gian</a>
-            <!-- <a href="gallery.html" class="btn btn-gallery">Ảnh kỷ niệm</a> -->
+            <a href="gallery.html" class="btn btn-gallery">Ảnh kỷ niệm</a>
         </div>
         <div id="main">
              <div id="wrap">
@@ -31,18 +31,15 @@
 			        <div id="code">
 					<!-- 4. CHỈNH SỬA LỜI CHÚC CỦA BẠN TẠI ĐÂY-->
 			      <font color="#3500ff"><span class="say">Chúc mừng sinh nhật Ngiu anh</span><br>
-						<span class="say">Một người em cùng công ty</span><br>
-                        <span class="say">Một người em đã từng cùng bàn</span><br>
-                        <span class="say">Một người em học cùng trường đại học (tuy là đại học không biết nhau)</span><br>
-                        <span class="say">Và hiện tại là hai đứa đang cùng yêu nhau</span><br>
-						<span class="say">Không biết sau này còn cái gì cùng nữa không :D.</span><br>
-						<span class="say"> </span><br>
-						<span class="say">Hôm nay là ngày 17 tháng 3, tròn 23 năm của ai đó rất dễ thương</span><br>
+                        <span class="say">Hi Ngiu, lại là anh đây</span><br>
+                        <span class="say">Lần này anh xin phép viết thư tay không phải bằng thiệp nữa ạ =))</span><br>
+						<span class="say">Hôm nay là ngày 17 tháng 3, tròn 23 năm Ngiu dễ thương của anh</span><br>
 						<span class="say">Nhân dịp sinh nhật Ngiu, tranh thủ gửi ít lời chúc vậy </span><br>
-						<span class="say">Chúc Ngiu tuổi mới càng lớn càng xinh hơn nữa =)),</span><br>
-						<span class="say">Cuộc sống gặp nhiều may mắn, làm việc gì cũng thuận lợi</span><br>
-                        <span class="say">Chúc Ngiu thêm tuổi mới thêm nhiều sức khỏe. Còn về hạnh phúc và niềm vui anh mong rằng anh sẽ mang đến bên Ngiu một phần hạnh phúc và niềm vui trong cuộc đời Ngiu.</span><br>
-						<span class="say">Anh rất vui khi có Ngiu trong cuộc đời của anh. Cảm ơn Ngiu vì tất cả những điều tuyệt vời Ngiu đã làm cho anh. Có thể ngày này mang lại cho Ngiu rất nhiều niềm vui và hạnh phúc bởi vì Ngiu xứng đáng với tất cả điều này!</span><br>
+						<span class="say">Chúc Ngiu tuổi mới càng lớn càng xinh hơn nữa nè =)),</span><br>
+						<span class="say">Cuộc sống gặp nhiều may mắn, làm việc gì cũng thuận lợi nè</span><br>
+                        <span class="say">Chúc Ngiu thật nhiều sức khỏe. Còn về hạnh phúc và niềm vui anh mong rằng anh sẽ mang đến bên Ngiu một phần hạnh phúc và niềm vui trong cuộc đời Ngiu.</span><br>
+						<span class="say">Anh rất vui khi có Ngiu trong cuộc đời của anh. Cảm ơn Ngiu vì tất cả những điều tuyệt vời Ngiu đã làm cho anh.</span><br>
+                        <span class="say">Có thể ngày này mang lại cho Ngiu rất nhiều niềm vui và hạnh phúc bởi vì Ngiu xứng đáng với tất cả điều này!</span><br>
                         <span class="say">Chúc Ngiu có 1 ngày sinh nhật vui vẻ và ý nghĩa bên gia đình, bạn bè và người thân! ,</span><br>
                         <span class="say"><span class="space"></span> -- Trân trọng! --</span><br>
                         <span class="say"><span class="space"></span> -- Ký: From Ngiu đến từ phương xa của em With love </span>
@@ -62,7 +59,7 @@
 
     <!-- Phần nhạc -->
     <audio id="player" autoplay loop>
-        <source src="./music/music.mp3" type="audio/mp3" />
+        <source src="./music/Anh-Nang-Cua-Anh-Cho-Em-Den-Ngay-Mai-OST-Duc-Phuc.mp3" type="audio/mp3" />
     </audio>
     <script>
     (function(){
