--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <!-- Chữ ở menu bạn có thể sửa lại theo ý của bạn -->
             <a href="index.html" class="btn btn-bir">Sinh nhật</a>
             <a href="timeline.html" class="btn btn-timeline">Dòng thời gian</a>
-            <!-- <a href="gallery.html" class="btn btn-gallery">Ảnh kỷ niệm</a> -->
+            <a href="gallery.html" class="btn btn-gallery">Ảnh kỷ niệm</a>
         </div>
 
         <div class="balloon">
@@ -42,7 +42,7 @@
 
         <!-- 3. Phần nhạc -->
         <audio id="player" autoplay loop>
-            <source src="./music/music.mp3" type="audio/mp3" />
+            <source src="./music/ToTheMoon-hooligan-6484403.mp3" type="audio/mp3" />
         </audio>
     </body>
 </html>
